--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="assets/imgs/title_Icon.png">
+    <link rel="stylesheet" href="assets/styles.css">
     <title>JS Quiz</title>
 </head>
 <body>
     
+    <script src="assets/script.js"></script>
 </body>
 </html>
