Quiz with Highscores, need to implement timer

--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="assets/imgs/title_Icon.png">
-    <link rel="stylesheet" href="assets/styles.css">
-    <title>JS Quiz</title>
+    <title>Home</title>
+    <link rel="stylesheet" href="/assets/styles.css">
 </head>
 <body>
-    
-    <script src="assets/script.js"></script>
+    <div class="container">
+        <div id="home" class="flex-column flex-center">
+            <h1>Hit play when ready! Goodluck.</h1>
+            <a href="/game.html" class="btn">Play</a>
+            <a href="/highscores.html" id="highscore-btn" class="btn">High Scores</a>
+        </div>
+    </div>
 </body>
 </html>
