--- a/end.html
+++ b/end.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Save your Score!</title>
-    <link rel="stylesheet" href="/assets/styles.css">
+    <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
     <div class="container">
@@ -16,10 +16,10 @@
                 <input type="text" name="name" id="username" placeholder="Enter Name">
                 <button class="btn" id="saveScoreBtn" tpye="submit" onclick="saveHighScore(event)" disabled>Save</button>
             </form>
-            <a href="/game.html" class="btn">Play Again</a>
-            <a href="/index.html" class="btn">Go Home</a>
+            <a href="game.html" class="btn">Play Again</a>
+            <a href="index.html" class="btn">Go Home</a>
         </div>
     </div>
-    <script src="/assets/end.js"></script>
+    <script src="assets/end.js"></script>
 </body>
 </html>
