--- a/game.html
+++ b/game.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="/assets/imgs/title_Icon.png" />
-    <link rel="stylesheet" href="/assets/styles.css" />
+    <link rel="icon" type="image/x-icon" href="assets/imgs/title_Icon.png" />
+    <link rel="stylesheet" href="assets/styles.css" />
     <title>JS Quiz</title>
   </head>
   <body>
@@ -45,6 +45,6 @@
             </div>
         </div>
     </div>
-    <script src="/assets/script.js"></script>
+    <script src="assets/script.js"></script>
   </body>
 </html>
