--- a/highscores.html
+++ b/highscores.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>High Scores</title>
-    <link rel="stylesheet" href="/assets/styles.css">
-    <link rel="stylesheet" href="/assets/highscores.css">
+    <link rel="stylesheet" href="assets/styles.css">
+    <link rel="stylesheet" href="assets/highscores.css">
 </head>
 <body>
     <div class="container">
         <div id="highScores" class="flex-center flex-column">
             <h1 id="finalScore">Leaderboard</h1>
             <ul id="highScoresList"></ul>
-            <a href="/index.html" class="btn">Go Home</a>
+            <a href="index.html" class="btn">Go Home</a>
         </div>
     </div>
-    <script src="/assets/highscores.js"></script>
+    <script src="assets/highscores.js"></script>
 </body>
 </html>
