--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="/assets/styles.css">
+    <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
     <div class="container">
         <div id="home" class="flex-column flex-center">
             <h1>Hit play when ready! Goodluck.</h1>
-            <a href="/game.html" class="btn">Play</a>
-            <a href="/highscores.html" id="highscore-btn" class="btn">High Scores</a>
+            <a href="game.html" class="btn">Play</a>
+            <a href="highscores.html" id="highscore-btn" class="btn">High Scores</a>
         </div>
     </div>
 </body>
