--- a/game.html
+++ b/game.html
@@ -16,6 +16,9 @@
                     <p id="progressText" class="hud-prefix">
                         Question
                     </p>
+                    <p id="timer" class="hud-prefix">
+                        00:00
+                    </p>
                 </div>
                 <div class="hud-item">
                     <p class="hud-prefix">
